# GPT2

./: .gitignore  Dockerfile.production  README.MD  configuration.nginx  docker-compose.yaml  fineweb.py  gpt2.py  gunicorn.py  hellaswag.py  inference.py  pyproject.toml  requirements.txt  server.py  supervisord.conf  train_gpt2.py
monitor/: telegraf.conf
