[tool.poetry]
name = "gpt2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gdown = "^5.2.0"
tiktoken = "^0.7.0"
numpy = "^2.0.0"
flask = "^3.0.3"
gunicorn = "^22.0.0"
prometheus-flask-exporter = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
